[package]
name = "fhe_log_regression"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html



[features]
z8z-ks=[]
z16z-ks=[]


[dependencies]
concrete="=0.1.5"
colored="2.0.0"
itertools = "0.9.0"
ndarray="0.15.4"
rand="0.8.5"
clap = { version = "3.1.18", features = ["derive"] }
bincode="1.3.3"